Fixed gap under main cell nad created a bottom banner with the skills logos.

--- a/resources/static/css/main.css
+++ b/resources/static/css/main.css
@@ -210,7 +210,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden
+    overflow: hidden;
+    height: 3em;
 }
 .banner img {
     flex-shrink: 0;
@@ -218,11 +219,30 @@ body {
     max-height: 75%;
     margin-right: 1em;
 }
+.lower-banner {
+    background-color: black;
+    margin-bottom: 0;
+    padding-top: 0;
+    margin-top: 0;
+}
 
 .video-div {
     background-image: url("../img/Kings-Son.png");
     background-size: cover;
     position: relative;
+    border: 2px solid black;
+    padding: 0;
+    margin: 0;
+}
+
+.video-clip {
+    vertical-align: center;
+    opacity: 10%;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: block;
 }
 
 #resume {
@@ -235,6 +255,8 @@ body {
     color: aliceblue;
     overflow-y: auto;
     font-size: 1.2em;
+    padding: 0;
+    margin: 0;
 }
 
 .prod-credit {
@@ -299,8 +321,4 @@ pr {
 
 .minor-case {
     font-size: .5em;
-}
-.video-clip {
-    vertical-align: center;
-    opacity: 10%;
 }
